dominando tags e redimensionamento

--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons/48- iconemantecfavicon.ico" type="image/x-icon">
     <title>Currículo</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <style>
+        header {
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
     <main>
         <header>
             <h1>Título do Site</h1>
+            
         </header>
         <article>
             <h2> Artigo 01</h2>
-            <p>Texto do Artigo 01</p>
+            <p>Texto do Artigo 01 </p>
+            <img src="images/200x200-1024px-UVA_logo..png" alt="">
+           
         </article>
         <article>
-            <h3>Artigo 02</h3>
+            <h2>Artigo 02</h2>
             <p>Texto do Artigo 02</p>
         </article>
     </main>
