--- a/index.html
+++ b/index.html
@@ -3,16 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <link rel="shortcut icon" href="icons/48- iconemantecfavicon.ico" type="image/x-icon">
+        <script src="https://kit.fontawesome.com/996973c893.js"></script> <!--online library for all icons-->
         <title>Currículo</title>
         <link rel="stylesheet" href="estilos/style.css">
-
-        
     </head>
+
     <body>
         <header>
-            <h1>Título do Site</h1>
-            <nav><img src="images/200x200-1024px-UVA_logo..png" alt=""></nav> 
+            <nav><img src="images/200x200-1024px-UVA_logo..png" alt=""></nav>
+            <div class="box">
+                <div class="header">
+                    <div class="header-left"></div>
+                        <div class="name">
+                            <h1 class="nome">Arhtur</h1>
+                            <h1 class="sobrenome">Anacleto</h1>
+                        </div>
+                    <div class="header-right">
+                        <div class="email">
+                            <p><a href="mailto:arthuranacleto@yahoo.com">arthuranacleto@yahoo.com</a></p>
+                            <i class="fas fa-envelope"></i> <!--https://fontawesome.com/icons?d=gallery&q=email-->
+                        </div>
+                        <div class="linkedin">
+                            <p> <a href="http://linkedin.com/in/tturo-anacleto" target="_blank" rel="external">linkedin.com/in/tturo-anacleto</a> </p>
+                            <i class="fab fa-linkedin"></i>
+                          </div>
+                          <div class="github">
+                            <p>Você também pode acessar o meu <a href="http://gitshowcase.com/arthuranacleto" target="_blank" rel="external">gitshowcase.com/arthuranacleto</a></p>
+                            <i class="fab fa-github"></i>
+                          </div>
+                          <div class="phone">
+                            <p>(51) 9 9271-1646</p>
+                            <i class="fas fa-phone"></i>
+                          </div>
+                    </div>
+                </div>
+            </div>         
         </header>
 
         <main>     
@@ -56,7 +83,6 @@
                 <li>React
             </ul>
         </main>
-        
 
         <footer>
             <h6>Contato</h6>
